--- a/index.html
+++ b/index.html
@@ -8,24 +8,36 @@
     <title>Broccolife</title>
 </head>
 <body>
-    <header>
-        <img src="\img\logo.png" alt="">
-        <a> About Us </a>
-        <a> Recipes </a>
-        <a> Articles </a>
-        <a> Restaurants </a>
-    </header>
-    <div class="overlay first"></div> 
-<div class="overlay second"></div>  
-<div class="overlay third"></div>
-    <section alt="hero-page">
-        <img src="\img\hero.png" alt=""> 
-        <h1>Broccolife</h1>
-        <h2> Conecting people to better food choices </h2>
-        
-    </section>
-    <section>
+    <main>
+        <div id="main-container">
+            <header>
+                <div class="container">
+                    <div class="logo">
+                        <img src="./app/img/logo.png" alt="">
+                    </div>
+                    <div class="links">
+                        <ul>
+                            <li><a href="#">About Us</a></li>
+                            <li><a href="#">Pricing</a></li>
+                            <li><a href="#">Places</a></li>
+                            <li><a href="#">Contact Us</a></li>
+                            <li><a class ="button" href="#"> Sign Up</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </header>
+            <section>
+                <div class="container showcase">
+                    <h1> olaaaa</h1>
+                </div>
+            </section>
+            <section>
+                <div class="container">
 
-    </section>   
+                </div>
+            </section>
+
+        </div>
+    </main>
 </body>
 </html>
